--- a/Task1/task1.2.html
+++ b/Task1/task1.2.html
@@ -7,10 +7,8 @@
 <body>
 	<div>
 	<h1>SCORE:<span id="score"></span></h1>
-	<button id="up">UP</button><br>
-	<button id="left">LEFT</button>
-	<button id="down">DOWN</button>
-	<button id="right">RIGHT</button>
+	<button id="cw">CLOCKWISE</button>
+	<button id="acw">ANTICLOCKWISE</button>
 	</div>
 	<canvas id="canvas"></canvas>
 	<script type="text/javascript" src="task1.2.js"></script>
